--- a/website/seasons.html
+++ b/website/seasons.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -19,7 +19,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f3f4f6;
+            background-color: #1a202c;
             color: #333;
             display: flex; /* For sticky footer layout */
             flex-direction: column; /* For sticky footer layout */
