--- a/website/doc.html
+++ b/website/doc.html
@@ -186,7 +186,7 @@
 
       <!-- Section: Allied AutoCorrection -->
       <div id="autocorrection">
-        <h2>Allied AutoCorrection</h2>
+        <h2 style ="color:purple;" >Allied AutoCorrection</h2>
         <p>
           Allied AutoCorrection is a beautiful and helpful function for all FLL teams. The function provides precision in all aspects. Imagine you are walking straight and you trip. Now you will get back in the same line you were walking in, and walk until you reach your final destination. Allied AutoCorrection is here to help the robot do the same. One of the sensors used is the gyro sensor. A gyro sensor helps track the robot's position in a graph. The gyro sensor helps with the x, y, and z plane. This helps us to see if the robot has encountered an error.
         </p>
