--- a/website/doc.html
+++ b/website/doc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/x-icon" href="https://placehold.co/16x16/000000/FFFFFF?text=L">
+  <link rel="icon" type="image/x-icon" href="/website/images/logo.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Allied Work</title>
