--- a/website/doc.html
+++ b/website/doc.html
@@ -269,7 +269,7 @@
                 sidebar.style.backgroundColor = '#10B981'; /* Green-500 */
                 break;
               case 'autocorrection':
-                sidebar.style.backgroundColor = '#059669'; /* Green-600 */
+                sidebar.style.backgroundColor = 'purple'; /* Green-600 */
                 break;
               case 'related':
                 sidebar.style.backgroundColor = '#047857'; /* Green-700 */
