--- a/website/seasons.html
+++ b/website/seasons.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Ensure your JavaScript file is correctly linked -->
-    <script src="season-data.js"></script> 
+    <script src="seasons.js"></script> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allied Algorithms - FLL Team Accomplishments</title>
