--- a/website/doc.html
+++ b/website/doc.html
@@ -10,7 +10,7 @@
             $("#includedContent").load("header.html");
             $("#Content").load("footer.html");
         });
-    </script>
+  </script>
   <style>
     /* Global Styles */
     body {
@@ -269,7 +269,7 @@
                 sidebar.style.backgroundColor = '#10B981'; /* Green-500 */
                 break;
               case 'autocorrection':
-                sidebar.style.backgroundColor = 'purple'; /* Green-600 */
+                sidebar.style.backgroundColor = 'purple'; /* purple */
                 break;
               case 'related':
                 sidebar.style.backgroundColor = '#047857'; /* Green-700 */
