--- a/website/footer.html
+++ b/website/footer.html
@@ -12,7 +12,7 @@
                 <ul class="space-y-2 text-sm">
                     <li><a href="https://www.firstlegoleague.org/" target="_blank" rel="noopener noreferrer" class="hover:text-white transition duration-300 ease-in-out rounded-md p-1 block">FIRST LEGO League Official Site</a></li>
                     <li><a href="https://www.firstinspires.org/" target="_blank" rel="noopener noreferrer" class="hover:text-white transition duration-300 ease-in-out rounded-md p-1 block">FIRST Robotics Official Site</a></li>
-                    <li><a href="https://youtu.be/exWkcUBS0j8?si=oZ2BRTdK8B6WXpFX" target="blank" class="hover:text-white transition duration-300 ease-in-out rounded-md p-1 block">FLL Challenge 25</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=ErDj8myI_Tg" target="blank" class="hover:text-white transition duration-300 ease-in-out rounded-md p-1 block">FLL Challenge 25</a></li>
                 </ul>
             </div>
 
