--- a/website/navbar.html
+++ b/website/navbar.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <styke>
+    <style>
       .navbar {
             position: fixed; /* Changed to fixed to keep it in place during scroll */
             top: 20px; /* Distance from the top of the viewport */
@@ -84,7 +84,7 @@
                 margin: 5px; /* Adds margin around wrapped links */
             }
       }
-    </styke>
+    </style>
   </head>
   <body>
       <nav class="navbar">
