--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
     <title>Allied Algorithms</title>
     <!-- Tailwind CSS CDN for utility classes and responsive design -->
     <script src="https://cdn.tailwindcss.com"></script>
-          <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="/website/index.css">
 </head>
 <body>
  <div id="navbar"></div>
