--- a/website/navbar.html
+++ b/website/navbar.html
@@ -89,7 +89,7 @@
   <body>
       <nav class="navbar">
         <div class="logo">
-            <span class="logo-dots">&bull;&bull;&bull;</span> Allied
+            <span class="logo-dots"><img src ="Allied Algorithms.svg"></span> Allied
         </div>
         <div class="navbar-links">
             <a href="#" class="current-page">Home</a>
