--- a/website/navbar.html
+++ b/website/navbar.html
@@ -89,13 +89,13 @@
   <body>
       <nav class="navbar">
         <div class="logo">
-            <span class="logo-dots"><img src ="Allied Algorithms.svg"></span> Allied
+            <span class="logo-dots"><img src ="./images/Allied-Algorithms_logo.svg"></span> Allied
         </div>
         <div class="navbar-links">
-            <a href="#" class="current-page">Home</a>
-            <a href="#">Members</a>
-            <a href="#">Seasons</a>
-            <a href="#">Robot Design</a>
+            <a href="./index.html" class="current-page">Home</a>
+            <a href="./abtus.html">Members</a>
+            <a href="./seasons.html">Seasons</a>
+            <a href="./robot.html">Robot Design</a>
         </div>
     </nav>
 
