--- a/website/navbar.html
+++ b/website/navbar.html
@@ -19,6 +19,7 @@
         }
 
         .navbar .logo {
+            width:50px;
             color: white; /* White text for the logo */
             font-size: 1.75rem; /* Large font size for the logo */
             font-weight: bold; /* Bold text */
