--- a/website/index.html
+++ b/website/index.html
@@ -16,13 +16,46 @@
 </head>
 <body>
     <div id="navbar"></div>
+<img src="./images/index_plan.jpg   ">
 
-    <div class="main-content">
-        <h1 class="relative">
-            { Innovating the Future, One Robot at a Time }
-        </h1>
-        <p>Welcome to Allied Algorithms - where engineering meets creativity.</p>
-    </div>
+    <section class="max-w-7xl mx-auto my-12 p-8 bg-white rounded-lg shadow-xl fade-in-box">
+        <h2 class="text-3xl font-semibold text-gray-800 mb-6">Team in Action</h2>
+
+        <div class="flex flex-wrap items-center -mx-4 mb-8">
+            <div class="w-full md:w-1/2 p-4 md:order-last">
+                <img src="./images/seasons/yr_24-25.jpg" alt="FLL Team working on robot" class="w-full h-auto rounded-lg shadow-md">
+            </div>
+            <div class="w-full md:w-1/2 p-4 md:order-first text-left text-gray-700">
+                <h3 class="text-2xl font-bold mb-4">Innovation and Teamwork</h3>
+                <p class="mb-4">
+                    Our FIRST LEGO League team is driven by a passion for innovation and a commitment to teamwork. Each season, we dive deep into the challenge, brainstorming creative solutions, designing unique robots, and refining our programming skills.
+                </p>
+                <p class="mb-4">
+                    Beyond the robot game, our team focuses on the Core Values of FLL. Gracous professionalism, discovery, and inclusion. We support each other, celebrate successes, and learn from our mistakes, building not just robots, but also strong friendships and valuable life skills.
+                </p>
+                <p>
+                    We are constantly exploring new ideas and pushing the boundaries of what's possible with LEGO robotics. Join us on our journey of discovery and innovation!
+                </p>
+            </div>
+        </div>
+
+        <div class="flex flex-wrap items-center -mx-4"> <div class="w-full md:w-1/2 p-4 md:order-last">
+                <img src="https://www.firstinspires.org/sites/default/files/uploads/resource_library/brand/thumbnails/FLL-Challenge-H-Stack.png" alt="FIRST LEGO League logo and robot" class="w-full h-auto rounded-lg shadow-md">
+            </div>
+            <div class="w-full md:w-1/2 p-4 md:order-first text-left text-gray-700">
+                <h3 class="text-2xl font-bold mb-4">What is FIRST LEGO League (FLL)?</h3>
+                <p class="mb-4">
+                    FIRST LEGO League (FLL) is a global robotics competition that introduces young people to the exciting world of STEM through hands-on learning. Teams typically aged 9-16 (ages may vary by region) work together to design, build, and program LEGO robots to complete a series of missions on a themed playing field.
+                </p>
+                <p class="mb-4">
+                    But FLL is much more than just robots! It also challenges teams to identify a real-world problem related to the annual theme and develop an innovative solution, which they present to a panel of judges. Through this process, participants develop critical thinking, problem-solving, and presentation skills, all while embodying FLL's core values like teamwork and gracious professionalism.
+                </p>
+                <p>
+                    It's an incredible opportunity for students to explore science and technology in a fun, competitive, and supportive environment, preparing them for future success in a rapidly evolving world.
+                </p>
+            </div>
+        </div>
+    </section>
 
     <div class = "footer">
         <div id="footer"></div>
