--- a/website/robot.html
+++ b/website/robot.html
@@ -16,223 +16,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <style>
-        /* Core styles for content cards, inputs, and buttons */
-        @import url('https://rsms.me/inter/inter.css');
-
-        :root {
-            --color-bg-dark: #1a202c;
-            --color-card-bg: #2d3748;
-            --color-text-light: #e2e8f0;
-            --color-text-heading: #ffffff;
-            --color-border-dark: #4a5568;
-            --color-blue-primary: #4299e1;
-            --color-blue-hover: #3182ce;
-            --color-purple-link: #9f7aea;
-            --color-purple-hover: #b794f4;
-            --color-focus-ring: rgba(99, 179, 237, 0.5);
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: var(--color-bg-dark);
-            color: var(--color-text-light);
-        }
-
-        .robot {
-            border-bottom: 2px solid white;
-            padding-bottom: 3px;
-        }
-
-        /* Main content card wrapper */
-        .main-content-card {
-            display: flex;
-            flex-direction: column;
-            max-width: 1200px;
-            width: 100%;
-            background-color: var(--color-card-bg);
-            border-radius: 1rem;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
-            overflow: hidden;
-            margin-bottom: 2rem;
-            border: 1px solid rgba(255, 255, 255, 0.05);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .main-content-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.5);
-        }
-
-        /* Desktop layout for cards */
-        @media (min-width: 768px) {
-            .main-content-card {
-                flex-direction: row;
-            }
-        }
-
-        .image-container {
-            flex: 1;
-            background-color: var(--color-border-dark);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-            border-radius: 1rem 1rem 0 0;
-            min-height: 250px;
-        }
-
-        @media (min-width: 768px) {
-            .image-container {
-                border-radius: 1rem 0 0 1rem;
-            }
-        }
-
-        .image-container img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: inherit;
-        }
-
-        .content-container {
-            flex: 1;
-            padding: 2.5rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            border-radius: 0 0 1rem 1rem;
-            color: var(--color-text-light);
-        }
-
-        @media (min-width: 768px) {
-            .content-container {
-                border-radius: 0 1rem 1rem 0;
-            }
-        }
-
-        .heading-text {
-            font-size: 2rem;
-            font-weight: 800;
-            color: var(--color-text-heading);
-            margin-bottom: 1.5rem;
-            text-align: center;
-            letter-spacing: -0.05em;
-            line-height: 1.2;
-        }
-
-        /* Adjust input field for consistent look */
-        input[type="text"] {
-            border: 1px solid var(--color-border-dark);
-            outline: none;
-            background-color: var(--color-card-bg);
-            color: var(--color-text-light);
-            padding: 0.75rem 1rem;
-            border-radius: 0.5rem;
-            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
-        }
-
-        input[type="text"]:focus {
-            border-color: var(--color-blue-primary);
-            box-shadow: 0 0 0 3px var(--color-focus-ring);
-            background-color: rgba(255, 255, 255, 0.05);
-        }
-
-        input::placeholder {
-            color: #a0aec0;
-            opacity: 0.7;
-        }
-
-        /* Styles for the button with SVG */
-        .action-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.75rem;
-            background-color: var(--color-blue-primary);
-            color: white;
-            font-weight: bold;
-            padding: 1rem 1.5rem;
-            border-radius: 0.75rem;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-            margin-top: 1.5rem;
-            align-self: stretch;
-        }
-
-        .action-button:hover {
-            background-color: var(--color-blue-hover);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);
-        }
-
-        .action-button:active {
-            transform: translateY(0);
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .action-button:focus {
-            outline: none;
-            box-shadow: 0 0 0 4px var(--color-focus-ring);
-        }
-
-        .action-button .download-icon {
-            width: 1.5rem;
-            height: 1.5rem;
-            fill: currentColor;
-        }
-
-        /* Styles for the CAD link */
-        .cad-link {
-            align-self: center;
-            margin-top: 1.5rem;
-            color: var(--color-purple-link);
-            text-decoration: none;
-            font-size: 1rem;
-            font-weight: 600;
-            transition: color 0.3s ease, transform 0.3s ease;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .cad-link:hover {
-            color: var(--color-purple-hover);
-            transform: translateY(-1px);
-            text-decoration: underline;
-        }
-
-        /* Status message styling */
-        .status-message {
-            margin-top: 1.5rem;
-            padding-top: 1rem;
-            text-align: center;
-            font-size: 0.95rem;
-            font-weight: 500;
-            color: #cbd5e0;
-        }
-
-        .status-message.error {
-            color: #fc8181;
-        }
-
-        .status-message.success {
-            color: #68d391;
-        }
-
-        .status-message.loading {
-            color: #63b3ed;
-        }
-
-        hr {
-            border: none;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            margin: 3rem auto;
-            width: 80%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -244,125 +28,7 @@
     <div id="Content"></div>
 
     <script src="robotDesigns.js"></script>
-    <script>
-        $(function () {
-            $("#includedContent").load("navbar.html");
-            $("#Content").load("footer.html");
-            renderRobotCards(); // Call the function to generate cards
-        });
-
-        const DISCORD_WEBHOOK_URL = "https://discord.com/api/webhooks/1377087321203150941/iK28JWFiXjPouGOpEVnvhExkIqPdp8H7P7HT5oSJHdpPFOgMsOde9s8fD-xSnyl_MNbQ";
-
-        async function handleDownload(robotVersion, teamNumberInputId, statusMessageId, downloadFilePath) {
-            const teamNumberInput = document.getElementById(teamNumberInputId);
-            const statusMessage = document.getElementById(statusMessageId);
-            const teamNumber = teamNumberInput.value.trim();
-
-            statusMessage.textContent = '';
-            statusMessage.className = 'status-message';
-
-            if (!teamNumber) {
-                statusMessage.textContent = "Please enter a team number before downloading.";
-                statusMessage.classList.add("error");
-                return;
-            }
-
-            const anchor = document.createElement('a');
-            anchor.href = downloadFilePath;
-            anchor.download = downloadFilePath.split('/').pop();
-            document.body.appendChild(anchor);
-            anchor.click();
-            document.body.removeChild(anchor);
-
-            await sendDiscordMessageFromBrowser(teamNumberInputId, statusMessageId, robotVersion);
-        }
-
-        async function sendDiscordMessageFromBrowser(teamNumberInputId, statusMessageId, robotVersion) {
-            const teamNumberInput = document.getElementById(teamNumberInputId);
-            const statusMessage = document.getElementById(statusMessageId);
-            const teamNumber = teamNumberInput.value.trim();
-
-            if (!teamNumber) {
-                return;
-            }
-
-            const messageContent = `Team ${teamNumber} has downloaded robot version ${robotVersion} on ${new Date().toLocaleString('en-US', { timeZone: 'America/New_York' })}`;
-
-            const payload = {
-                content: messageContent
-            };
-
-            statusMessage.textContent = "Notifying Discord...";
-            statusMessage.classList.remove("error", "success");
-            statusMessage.classList.add("loading");
-
-            try {
-                const response = await fetch(DISCORD_WEBHOOK_URL, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(payload)
-                });
-
-                if (response.ok) {
-                    statusMessage.textContent = `Team ${teamNumber} downloaded robot version ${robotVersion}!`;
-                    statusMessage.classList.remove("loading", "error");
-                    statusMessage.classList.add("success");
-                    teamNumberInput.value = '';
-                } else {
-                    const errorDetails = await response.text();
-                    statusMessage.textContent = `Failed to send download notification. Status: ${response.status}.`;
-                    statusMessage.classList.remove("loading", "success");
-                    statusMessage.classList.add("error");
-                    console.error("Discord API Error:", response.status, errorDetails);
-                }
-            } catch (error) {
-                statusMessage.textContent = `An error occurred while sending notification.`;
-                statusMessage.classList.remove("loading", "success");
-                statusMessage.classList.add("error");
-                console.error("Fetch operation failed:", error);
-            }
-        }
-
-        // Function to dynamically generate the cards from the data
-        function renderRobotCards() {
-            const container = document.getElementById('robot-cards-container');
-            container.innerHTML = ''; // Clear container before adding new cards
-
-            robotDesigns.forEach((robot, index) => {
-                const cardHtml = `
-                    <div class="main-content-card">
-                        <div class="image-container">
-                            <img src="${robot.imageSrc}" alt="${robot.imageAlt}">
-                        </div>
-                        <div class="content-container">
-                            <h2 class="heading-text">${robot.heading}</h2>
-                            <div>
-                                <label for="${robot.teamNumberInputId}" class="block text-sm font-semibold mb-2">
-                                    Team Number:
-                                </label>
-                                <input type="text" id="${robot.teamNumberInputId}" placeholder="e.g. 58590, Allied Algo" class="w-full">
-                            </div>
-                            <button onclick="handleDownload(${index + 1}, '${robot.teamNumberInputId}', '${robot.statusMessageId}', '${robot.downloadFilePath}')"
-                                class="action-button">
-                                <svg class="download-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path d="M16 11c-.55 0-1 .45-1 1v4H9v-4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 1.1.9 2 2 2h6c1.1 0 2-.9 2-2v-4c0-.55-.45-1-1-1zM12 3L7 8h3v4h4V8h3l-5-5z" />
-                                </svg>
-                                Download Files
-                            </button>
-                            <a href="${robot.cadLink}" target="_blank" rel="noopener noreferrer" class="cad-link">
-                                View CAD Link
-                            </a>
-                        </div>
-                    </div>
-                    <p id="${robot.statusMessageId}" class="status-message"></p>
-                    ${index < robotDesigns.length - 1 ? '<hr>' : ''}
-                `;
-                container.insertAdjacentHTML('beforeend', cardHtml);
-            });
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
