--- a/website/seasons.html
+++ b/website/seasons.html
@@ -259,7 +259,7 @@
 
         // Run functions when the DOM is fully loaded
         document.addEventListener('DOMContentLoaded', function() {
-            loadHTML('includedContent', 'header.html');
+            loadHTML('includedContent', 'navbar.html');
             loadHTML('Content', 'footer.html');
             renderCurrentSeason(); // Call this to populate the current season details
             renderPastSeasons(); // Call this to populate the past seasons
