--- a/website/abtus.html
+++ b/website/abtus.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
         $(function () {
-            $("#includedContent").load("header.html");
+            $("#includedContent").load("navbar.html");
             $("#Content").load("footer.html");
         });
     </script>
