--- a/website/abtus.html
+++ b/website/abtus.html
@@ -17,14 +17,16 @@
     </script>
     <style>
         body {
-            background-image: url('https://raw.githubusercontent.com/Anand-M-A/FLL-Website/main/public/images/bg.jpg');
+            /* Updated background image for a starry, less tinted look */
+            background-image: url('https://raw.githubusercontent.com/Anand-M-A/FLL-Website/main/public/images/bg_new.jpg'); 
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
         }
 
         .member-card {
-            background-color: rgba(0, 0, 0, 0.4);
+            /* Slightly adjusted opacity for better contrast */
+            background-color: rgba(0, 0, 0, 0.5); 
             border-radius: 2rem;
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
@@ -41,7 +43,6 @@
             position: relative;
         }
         
-        /* This pseudo-element creates the gradient border */
         .profile-icon::after {
             content: '';
             position: absolute;
