--- a/website/abtus.html
+++ b/website/abtus.html
@@ -18,7 +18,7 @@
     <style>
         body {
             /* Updated background image for a starry, less tinted look */
-            background-image: url('https://raw.githubusercontent.com/Anand-M-A/FLL-Website/main/public/images/bg_new.jpg'); 
+            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_SwPONeP7uH99sKekA6n0QvyDeqxT5-c0bQ&s'); 
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
