--- a/website/abtus.html
+++ b/website/abtus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="/images/logo.png">
+    <link rel="icon" type="image/x-icon" href="./images/logo.png">
     <script src="members.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
     <style>
         body {
             /* Updated background image for a starry, less tinted look */
-            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_SwPONeP7uH99sKekA6n0QvyDeqxT5-c0bQ&s'); 
+            background-image: url('https://images.wallpaperscraft.com/image/single/starry_sky_galaxy_glitter_118638_800x600.jpg'); 
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
