--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,7 @@
             $("#footer").load("footer.html");
         });
     </script>
+    <link rel="icon" type="image/x-icon" href="./images/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allied Algorithms</title>
@@ -16,7 +17,7 @@
 </head>
 <body>
     <div id="navbar"></div>
-<img src="website/images/index_plan (1920 x 1150 px).svg">
+<img src="/images/index_plan (1920 x 1150 px).svg">
 
     <section class="max-w-7xl mx-auto my-12 p-8 bg-white rounded-lg shadow-xl fade-in-box">
         <h2 class="text-3xl font-semibold text-gray-800 mb-6">Team in Action</h2>
