--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sid Ag - Web Developer Portfolio</title>
+    <link rel="icon" href="2.svg" type="image/svg+xml">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
@@ -14,9 +15,7 @@
     <header class="fixed top-0 left-0 right-0 z-50 p-4 hidden lg:flex justify-center">
         <div class="navbar-custom flex items-center space-x-4 p-2 shadow-xl">
             <a href="#" class="flex items-center justify-center w-10 h-10 rounded-full bg-white text-gray-900 shadow-md">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2h2.5M21 11H19a2 2 0 01-2-2V7a2 2 0 00-2-2h-2.5C7.5 1 4.5 7 3 11m18 0l-3 6m0 0l-5 2.5M21 11z"></path>
-                </svg>
+                <img src="1.svg" alt="Logo" class="w-6 h-6">
             </a>
 
             <nav class="flex space-x-2 text-gray-800 font-medium">
@@ -68,23 +67,15 @@
                     <span class="text-lg font-semibold mt-2 text-white">Python</span>
                 </div>
                 <div class="flex flex-col items-center justify-center p-4 bg-white bg-opacity-10 rounded-xl shadow-lg">
-                    <i class="devicon-cplusplus-plain skill-icon"></i>
-                    <span class="text-lg font-semibold mt-2 text-white">C++</span>
-                </div>
-                <div class="flex flex-col items-center justify-center p-4 bg-white bg-opacity-10 rounded-xl shadow-lg">
                     <i class="devicon-arduino-plain skill-icon"></i>
                     <span class="text-lg font-semibold mt-2 text-white">Arduino</span>
                 </div>
-                <div class="flex flex-col items-center justify-center p-4 bg-white bg-opacity-10 rounded-xl shadow-lg">
-                    <svg class="h-16 w-16 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-                    </svg>
+                <div class="flex flex-col items-center justify-center p-4 bg-purple-600 bg-opacity-80 rounded-xl shadow-lg">
+                    <img src="http://googleusercontent.com/file_content/0" alt="Block Coding Icon" class="h-16 w-16 object-contain">
                     <span class="text-lg font-semibold mt-2 text-white">Block Coding</span>
                 </div>
-                <div class="flex flex-col items-center justify-center p-4 bg-white bg-opacity-10 rounded-xl shadow-lg">
-                    <svg class="h-16 w-16 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 12h2m10 0h2M3 9h2m14 0h2M3 15h2m14 0h2M12 3c-1.105 0-2 .895-2 2v2a2 2 0 104 0V5c0-1.105-.895-2-2-2zM4 10h16v4H4v-4z"></path>
-                    </svg>
+                <div class="flex flex-col items-center justify-center p-4 bg-purple-600 bg-opacity-80 rounded-xl shadow-lg">
+                    <img src="https://play-lh.googleusercontent.com/0ZVVegD2UTczthb8v5tu19TXiJURZpBqUPUPAUrjvEUDFvbcWDJk_dnCxUwJMb1cMz05=w240-h480-rw" alt="Spike Prime Icon" class="h-16 w-16 rounded-full object-cover">
                     <span class="text-lg font-semibold mt-2 text-white">Spike Prime</span>
                 </div>
                 <div class="flex flex-col items-center justify-center p-4 bg-white bg-opacity-10 rounded-xl shadow-lg">
@@ -339,8 +330,11 @@
                 <a href="https://github.com/agsid" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors duration-300">
                     <i class="devicon-github-original text-2xl"></i>
                 </a>
-                <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors duration-300">
-                    <i class="devicon-linkedin-plain text-2xl"></i>
+                <a href="https://www.instagram.com/dino.axolotl/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors duration-300">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M12.315 2c2.43 0 2.712.01 3.653.047 1.053.044 1.74.225 2.185.385.492.179.828.384 1.253.809.425.425.63.761.809 1.253.16.445.341 1.132.385 2.185.037.941.047 1.223.047 3.653s-.01 2.712-.047 3.653c-.044 1.053-.225 1.74-.385 2.185-.179.492-.384.828-.809 1.253-.425.425-.761.63-1.253.809-.445.16-1.132.341-2.185.385-.94.037-1.223.047-3.653.047s-2.712-.01-3.653-.047c-1.053-.044-1.74-.225-2.185-.385-.492-.179-.828-.384-1.253-.809-.425-.425-.63-.761-.809-1.253-.16-.445-.341-1.132-.385-2.185-.037-.941-.047-1.223-.047-3.653s.01-2.712.047-3.653c.044-1.053.225-1.74.385-2.185.179-.492.384-.828.809-1.253.425-.425.761-.63 1.253-.809.445-.16 1.132-.341 2.185-.385.941-.037 1.223-.047 3.653-.047zm0-2c-2.673 0-2.99.01-4.042.047C7.309 0.091 6.346 0.28 5.488 0.61c-.853.344-1.48.729-2.115 1.365C2.614 2.614 2.229 3.24 1.885 4.093c-.33 0.867-.52 1.83-.564 2.883C1.26 7.859 1.25 8.175 1.25 11s.01 3.141.047 4.192c.044 1.052.234 2.015.564 2.883.345.853.729 1.48 1.365 2.115.635.636 1.262 1.021 2.115 1.365.867.33 1.83.52 2.883.564 1.052.037 1.369.047 4.192.047s3.141-.01 4.192-.047c1.052-.044 2.015-.234 2.883-.564.853-.345 1.48-.729 2.115-1.365.636-.635 1.021-1.262 1.365-2.115.33-.867.52-1.83.564-2.883.037-1.052.047-1.369.047-4.192s-.01-3.141-.047-4.192c-.044-1.052-.234-2.015-.564-2.883-.345-.853-.729-1.48-1.365-2.115C21.386 2.614 20.759 2.229 19.907 1.885c-.867-.33-1.83-.52-2.883-.564C15.141 1.26 14.825 1.25 12 1.25zM12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0 8c-1.656 0-3-1.344-3-3s1.344-3 3-3 3 1.344 3 3-1.344 3-3 3zm5.725-12.235c-.852 0-1.077.375-1.077 1.077s.225 1.077 1.077 1.077c.7 0 1.077-.375 1.077-1.077s-.375-1.077-1.077-1.077z" clip-rule="evenodd" />
+                    </svg>
+                    <span>Instagram</span>
                 </a>
             </div>
         </div>
@@ -348,7 +342,7 @@
 
     <footer class="bg-gray-900 bg-opacity-20 text-gray-400 py-6 text-center">
         <div class="container mx-auto px-4">
-            <p class="text-sm">&copy; 2025 Sid Ag. All rights reserved.</p>
+            <p class="text-sm">© 2025 Sid Ag. All rights reserved.</p>
         </div>
     </footer>
 
