--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
+    <script src="projects.js"></script>
+    <script src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sid Ag - Web Developer Portfolio</title>
@@ -38,7 +40,7 @@
     <section class="bg-gradient-to-r from-[#3A3982] to-[#4A47A9] text-white py-20 sm:py-32 text-center">
         <div class="container mx-auto px-4">
             <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold mb-4 leading-tight">
-                Hi, I'm **Sid Ag**, <br> a Passionate Web Developer.
+                Hi, I'm Sid Ag, <br> a Passionate Web Developer.
             </h1>
             <p class="text-lg sm:text-xl max-w-3xl mx-auto mb-8 opacity-90">
                 Crafting clean, elegant, and responsive web applications from concept to deployment.
@@ -170,7 +172,5 @@
             </a>
         </div>
     </nav>
-    <script src="projects.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
