--- a/website/robot.html
+++ b/website/robot.html
@@ -17,6 +17,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="style.css">
+    <style>
+        .main{
+            padding-top:75px;
+        }
+    </style>
 </head>
 
 <body>
