--- a/website/seasons.html
+++ b/website/seasons.html
@@ -29,6 +29,7 @@
         }
 
         main {
+            padding-top:75px;
             flex-grow: 1; /* Allows main content to take up available space, pushing footer down */
         }
 
