--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,9 +40,7 @@
             <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold mb-4 leading-tight">
                 Hi, I'm Sid Ag, <br> a Passionate Web Developer.
             </h1>
-            <p class="text-lg sm:text-xl max-w-3xl mx-auto mb-8 opacity-90">
-                Crafting clean, elegant, and responsive web applications from concept to deployment.
-            </p>
+           <img src = "1.svg">
             <a href="#projects" class="inline-block bg-white text-blue-700 font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-100">
                 View My Work
             </a>
