--- a/website/work.html
+++ b/website/work.html
@@ -7,7 +7,7 @@
     <title>FLL Bot Programmer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./work.css">
     <script>
         $(function () {
             $("#navbar").load("navabr.html");
