--- a/website/work.html
+++ b/website/work.html
@@ -89,6 +89,6 @@ print("Robot completed mission segment!")   # Show message in console
             <button id="modal-paste-code-button" class="button">Paste Code</button>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./work.js"></script>
 </body>
 </html>
