--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <!-- Block Coding -->
                 <div class="flex flex-col items-center justify-center p-4 bg-white rounded-xl shadow-lg">
-                    <img src="http://googleusercontent.com/file_content/0" alt="Block Coding Icon" class="h-16 w-16 object-contain">
+                    <img src="hhttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7mVCTQw7_duBfPrIuCg-o8Ue-dPXtvHkn7Q&s" class="h-16 w-16 object-contain">
                     <span class="text-lg font-semibold mt-2 text-gray-900">Block Coding</span>
                 </div>
                 <!-- Spike Prime -->
